--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run dep:gen && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dep:gen": "license-report --only=prod --output=json > licenses.json"
   },
   "dependencies": {
+    "license-report": "^6.5.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
