--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dep:gen": "license-report --only=prod --output=json > licenses.json"
   },
   "dependencies": {
+    "@prisma/client": "5.12.1",
     "license-report": "^6.5.0",
     "next": "14.1.4",
+    "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
