fix: missing migrate command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "vercel-build": "npm run dep:gen && prisma generate && prisma resolve --applied 0_init && prisma migrate deploy && next build",
+    "vercel-build": "npm run dep:gen && prisma generate && prisma migrate resolve --applied 0_init && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
     "dep:gen": "license-report --only=prod --output=json > licenses.json"
